# gdscript-docs-maker

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml
godot-scripts/: CollectorGd4.gd  README.md
src/gdscript_docs_maker/: __init__.py  __main__.py
