[project]
name = "gdscript-docs-maker"
version = "1.8.0"
description = "Create documentation and class references from your Godot GDScript code."
authors = [
    {name = "Nathan Lovato", email = "nathan@gdquest.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["godot", "gdscript", "documentation", "reference", "godotengine"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
dependencies = [
    "tomlkit>=0.13.3,<0.14.0"
]

[project.urls]
Homepage = "https://github.com/GDQuest/gdscript-docs-maker"
Repository = "https://github.com/GDQuest/gdscript-docs-maker"

[project.scripts]
gdscript-docs-maker = "gdscript_docs_maker.__main__:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.17.0"
pytest = "^8.4.1"
black = "^25.1.0"

[tool.poetry]
name = "gdscript-docs-maker"
version = "1.8.0"
description = "Create documentation and class references from your Godot GDScript code."
authors = ["Nathan Lovato <nathan@gdquest.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "gdscript_docs_maker", from = "src"}]
keywords = ["godot", "gdscript", "documentation", "reference", "godotengine"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8"
]

[tool.poetry.urls]
Homepage = "https://github.com/GDQuest/gdscript-docs-maker"
Repository = "https://github.com/GDQuest/gdscript-docs-maker"

[tool.poetry.scripts]
gdscript-docs-maker = "gdscript_docs_maker.__main__:main"

[tool.black]
line-length = 79
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

